# ink-multisig

./: .gitignore  .mocharc.json  Dockerfile  LICENSE  Makefile  README.md  package.json  tsconfig.json
.github/workflows/: sync-to-sdk-repo.yml  synt-to-sdk-repo.yml
artifacts/multisig/: multisig.contract  multisig.json
artifacts/multisig-factory/: multisig_factory.contract  multisig_factory.json
constants/: index.ts
contracts/: Cargo.toml  lib.rs
contracts/multisig/: lib.rs
contracts/multisig-factory/: Cargo.toml  lib.rs
multi_sig/: Cargo.toml  lib.rs
tests/: addOwnerFunction.test.ts  changeThresholdFunctions.test.ts  constructor.test.ts  multisigFactoryConstructor.test.ts  payableFunctions.test.ts  removeOwnerFunction.test.ts  testCases.test.ts  transfer.test.ts  txId.test.ts
tests/externalContracts/: contracts.json  payable_contract.contract  psp22.contract
tests/multisig/: addOwnerFunction.test.ts  changeThresholdFunctions.test.ts  constructor.test.ts  payableFunctions.test.ts  psp22.test.ts  removeOwnerFunction.test.ts  transfer.test.ts  txId.test.ts
tests/multisig-factory/: multisigFactory.test.ts
tests/utils/: ContractInterface.ts  MessageIndex.ts  contractsDeployment.ts  convertions.ts  testHelpers.ts
typed_contracts/multisig-factory/build-extrinsic/: multisig_factory.ts
typed_contracts/multisig-factory/constructors/: multisig_factory.ts
typed_contracts/multisig-factory/contract-info/: multisig_factory.ts
typed_contracts/multisig-factory/contracts/: multisig_factory.ts
typed_contracts/multisig-factory/data/: multisig_factory.json
typed_contracts/multisig-factory/event-data/: multisig_factory.json
typed_contracts/multisig-factory/event-types/: multisig_factory.ts
typed_contracts/multisig-factory/events/: multisig_factory.ts
typed_contracts/multisig-factory/mixed-methods/: multisig_factory.ts
utils/: build-core-contracts.sh  download-node.sh  test-runner.sh  types-gen.sh
xsigners_sdk/: Readme.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
xsigners_sdk/src/: CodeContractBuilder.ts  MultisigFactory.ts  index.ts
(+29 files in other folders)
